# YouvsYoutest

./: .gitignore  README.md  pyproject.toml  youvsyou
data/: journal.json
sample/: rules.json  trades_2024-12-02.json
src/youvsyou/: __init__.py  analysis.py  cli.py  models.py  storage.py
tests/: test_analysis.py
web/: index.html
